yarn add and cooldown collection bug fix

--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "type": "module",
   "license": "MIT",
   "dependencies": {
-    "addox": "^1.1.3",
+    "addox": "^1.2.7",
     "dotenv": "^16.0.2"
   },
   "scripts": {
     "start": "node src/app.js"
-  }
+  },
+  "repository": "https://github.com/acheladev/hirohy"
 }
