--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "dependencies": {
     "addox": "^1.2.7",
+    "basic-ms": "^1.1.4",
     "dotenv": "^16.0.2"
   },
   "scripts": {
